eagle_test/error/tuple_error.eagle
var l = (1, 2, 3);
print l[3];
// expected: [RuntimeError at line 2] Tuple subscript out of range.
print l["str"];
// expected: [RuntimeError at line 4] Tuple subscript must be integer.
l[0] = 4;
// expected: [RuntimeError at line 6] Tuple does not support item assignment
l.append(5);
// expected: [RuntimeError at line 8] Tuple has no method named append